--- a/dashboard/templates/auth/login.html
+++ b/dashboard/templates/auth/login.html
@@ -7,7 +7,7 @@
         <div class="card" style="border-radius: 1rem;">
           <div class="row g-0">
             <div class="col-md-6 col-lg-5 d-none d-md-block">
-              <img src="/media/cbb_logo.png"
+              <img src="https://i.imgur.com/68EXctP.png" 
                 alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem; padding:25px;" />
             </div>
             <div class="col-md-6 col-lg-7 d-flex align-items-center">
@@ -29,22 +29,18 @@
                   <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Ingresa tus credenciales</h5>
 
                   <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text" id="basic-addon1"><i class="fa fa-user"></i></span>
-                    </div>
+                    <span class="input-group-text" id="basic-addon1"><i class="fa fa-user"></i></span>
                     <input type="text" class="form-control" name="username" id="username" placeholder="Usuario" aria-label="Usuario" aria-describedby="basic-addon1">
                   </div>
                   
 
                   <div class="input-group mb-3">
-                    <div class="input-group-prepend">
                       <span class="input-group-text" id="basic-addon2"><i class="fa fa-lock"></i></span>
-                    </div>
                     <input type="password" class="form-control" name="password" id="password" placeholder="Contraseña" aria-label="Contraseña" aria-describedby="basic-addon2">
                   </div>
                   
 
-                  <div class="pt-1 mb-4">
+                  <div class="d-grid gap-2 pt-1 mb-4">
                     <button data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-lg btn-block" type="submit">Iniciar sesión</button>
                   </div>
                 </form>
