Add users app, make some refactors

--- a/authentication/templates/authentication/login.html
+++ b/authentication/templates/authentication/login.html
@@ -1,13 +1,13 @@
 {% extends "base.html" %}
 {% block content %}
-<section class="vh-100" style="background-color: #9A616D;">
+<section class="vh-100" style="background-color: #ff4c4c;">
   <div class="container py-5 h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col col-xl-10">
         <div class="card" style="border-radius: 1rem;">
           <div class="row g-0">
             <div class="col-md-6 col-lg-5 d-none d-md-block">
-              <img src="https://i.imgur.com/68EXctP.png" 
+              <img src="{{ MEDIA_URL }}/media/cbb_logo.png" 
                 alt="login form" class="img-fluid" style="border-radius: 1rem 0 0 1rem; padding:25px;" />
             </div>
             <div class="col-md-6 col-lg-7 d-flex align-items-center">
@@ -41,7 +41,7 @@
                   
 
                   <div class="d-grid gap-2 pt-1 mb-4">
-                    <button data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-lg btn-block" type="submit">Iniciar sesión</button>
+                    <button data-mdb-button-init data-mdb-ripple-init class="btn btn-dark btn-lg btn-block" type="submit" style="background-color: #E57373;">Iniciar sesión</button>
                   </div>
                 </form>
 
