--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,8 @@
      <!-- Required meta tags -->
      <meta charset="utf-8">
      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+     <link href="{{ MEDIA_URL }}/media/list_view.css" rel="stylesheet">
  
      <!-- Bootstrap CSS -->
      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -13,22 +15,22 @@
 </head>
 <body>
     {% if user.is_authenticated %}
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <nav class="navbar navbar-expand-lg" style="background-color:#ff4c4c;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">CBB</a>
+          <a class="navbar-brand" href="#"  style="color:white;">CBB</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'users_list' %}">Usuarios</a>
+                <a class="nav-link" href="{% url 'users_list' %}" style="color:white;">Usuarios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Permisos</a>
+                <a class="nav-link" href="#"  style="color:white;">Permisos</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle"  style="color:white;" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Reportes
                 </a>
                 <ul class="dropdown-menu">
@@ -41,7 +43,7 @@
             </ul>
             <form action="{% url 'logout' %}" method="post">
                 {% csrf_token %}
-                <button class="btn btn-outline-danger" type="submit">Cerrar Sesión</button>
+                <button class="btn" type="submit"  style="color:white;">Cerrar Sesión</button>
             </form>
           </div>
         </div>
