Type of permits CRUD

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,9 @@
                 <a class="nav-link" href="{% url 'users_list' %}" style="color:white;">Usuarios</a>
               </li>
               <li class="nav-item">
+                <a class="nav-link" href="{% url 'permit_types_list' %}"  style="color:white;">Tipo de Permisos</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link" href="#"  style="color:white;">Permisos</a>
               </li>
               <li class="nav-item dropdown">
