--- a/users/templates/users/users_list.html
+++ b/users/templates/users/users_list.html
@@ -7,11 +7,16 @@
 			<div class="table-wrapper">
 				<div class="table-title">
 					<div class="row">
-						<div class="col-6">
+						<div class="col-3">
 							<h2>Lista de Usuarios</h2>
 						</div>
-                        <div class="col-6">
-                            <a href="#addEmployeeModal" class="btn btn-success" data-toggle="modal"><i class="fa fa-user-plus"></i> <span>Crear Usuario</span></a>
+						<div class="col-5">
+                            <form class="d-flex" role="search">
+                                <input class="form-control me-2" id="search-users" type="search" value="{{ search_query }}" placeholder="Buscar Usuario" aria-label="Search">
+                            </form>
+                        </div>
+                        <div class="col-4">
+                            <a href="{% url 'users_create' %}" class="btn btn-success" data-toggle="modal"><i class="fa fa-user-plus"></i> <span>Crear Usuario</span></a>
 						</div>
 					</div>
 				</div>
@@ -22,10 +27,10 @@
 							<th>Nombre Completo</th>
 							<th>Activo</th>
                             <th>Rol</th>
-							<th>Actions</th>
+							<th></th>
 						</tr>
 					</thead>
-					<tbody>
+					<tbody id="users-table">
                         {% for user in users %}
                         <tr>
                             <td>{{ user.username }}</td>
@@ -42,11 +47,35 @@
                             </td>
                             <td>
                                 <div class="row">
-                                    <div class="col-6">
-                                        <a href="#editEmployeeModal" class="edit" data-toggle="modal"><i class="fa fa-user-pen"></i></a>
+                                    <div class="col-4">
+                                        <a href="{% url 'users_edit' pk=user.pk %}" class="edit" data-toggle="modal"><i class="fa fa-pen-to-square"></i></a>
                                     </div>
-                                    <div class="col-6">
-                                        <a href="#deleteEmployeeModal" class="delete" data-toggle="modal"><i class="fa fa-user-minus"></i></a>
+                                    <div class="col-4">
+                                        <!-- Button trigger modal -->
+                                        <a type="button" class="delete" data-bs-toggle="modal" data-bs-target="#userModal-{{user.pk}}">
+                                            <i class="fa fa-trash"></i>
+                                        </a>
+                                        <!-- Modal -->
+                                        <div class="modal fade" id="userModal-{{user.pk}}" tabindex="-1" aria-labelledby="userModalLabel" aria-hidden="true">
+                                            <div class="modal-dialog">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <h1 class="modal-title fs-5" id="userModalLabel">Deshabilitar Usuario</h1>
+                                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <p>¿Desea Deshabilitar el Usuario <b>{{ user.first_name }} {{ user.last_name }}</b>?</p>
+                                                </div>
+                                                <div class="modal-footer">
+                                                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                                                    <a class="btn btn-danger" style="color:white" href="{% url 'users_delete' pk=user.pk %}">Deshabilitar</a>
+                                                </div>
+                                            </div>
+                                            </div>
+                                        </div>
+                                    </div>
+									<div class="col-4">
+                                        <a href="{% url 'users_reset_password' pk=user.pk %}" class="add" data-toggle="modal"><i class="fa fa-lock"></i></a>
                                     </div>
                                 </div>
                             </td>
@@ -54,99 +83,23 @@
                         {% endfor %}
 					</tbody>
 				</table>
+				{% include 'pagination.html' %}
 			</div>
 		</div>        
     </div>
-	<!-- Edit Modal HTML -->
-	<div id="addEmployeeModal" class="modal fade">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<form>
-					<div class="modal-header">						
-						<h4 class="modal-title">Add Employee</h4>
-						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-					</div>
-					<div class="modal-body">					
-						<div class="form-group">
-							<label>Name</label>
-							<input type="text" class="form-control" required>
-						</div>
-						<div class="form-group">
-							<label>Email</label>
-							<input type="email" class="form-control" required>
-						</div>
-						<div class="form-group">
-							<label>Address</label>
-							<textarea class="form-control" required></textarea>
-						</div>
-						<div class="form-group">
-							<label>Phone</label>
-							<input type="text" class="form-control" required>
-						</div>					
-					</div>
-					<div class="modal-footer">
-						<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-						<input type="submit" class="btn btn-success" value="Add">
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
-	<!-- Edit Modal HTML -->
-	<div id="editEmployeeModal" class="modal fade">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<form>
-					<div class="modal-header">						
-						<h4 class="modal-title">Edit Employee</h4>
-						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-					</div>
-					<div class="modal-body">					
-						<div class="form-group">
-							<label>Name</label>
-							<input type="text" class="form-control" required>
-						</div>
-						<div class="form-group">
-							<label>Email</label>
-							<input type="email" class="form-control" required>
-						</div>
-						<div class="form-group">
-							<label>Address</label>
-							<textarea class="form-control" required></textarea>
-						</div>
-						<div class="form-group">
-							<label>Phone</label>
-							<input type="text" class="form-control" required>
-						</div>					
-					</div>
-					<div class="modal-footer">
-						<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-						<input type="submit" class="btn btn-info" value="Save">
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
-	<!-- Delete Modal HTML -->
-	<div id="deleteEmployeeModal" class="modal fade">
-		<div class="modal-dialog">
-			<div class="modal-content">
-				<form>
-					<div class="modal-header">						
-						<h4 class="modal-title">Delete Employee</h4>
-						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-					</div>
-					<div class="modal-body">					
-						<p>Are you sure you want to delete these Records?</p>
-						<p class="text-warning"><small>This action cannot be undone.</small></p>
-					</div>
-					<div class="modal-footer">
-						<input type="button" class="btn btn-default" data-dismiss="modal" value="Cancel">
-						<input type="submit" class="btn btn-danger" value="Delete">
-					</div>
-				</form>
-			</div>
-		</div>
-	</div>
+
+	<script>
+        document.getElementById("search-users").addEventListener("input", function() {
+          let query = this.value;
+          fetch(`?q=${query}`)
+            .then(response => response.text())
+            .then(data => {
+              let parser = new DOMParser();
+              let htmlDoc = parser.parseFromString(data, 'text/html');
+              let newTableBody = htmlDoc.getElementById("users-table").innerHTML;
+              document.getElementById("users-table").innerHTML = newTableBody;
+            });
+        });
+    </script>
    
 {% endblock %}
