--- a/templates/base.html
+++ b/templates/base.html
@@ -23,15 +23,39 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              {% if 'Administrador' in user_group_names %}
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'users_list' %}" style="color:white;">Usuarios</a>
               </li>
+              {% endif %}
+
+              {% if 'Administrador' in user_group_names %}
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'permit_types_list' %}"  style="color:white;">Tipo de Permisos</a>
               </li>
+              {% endif %}
+
+              {% if 'Administrador' in user_group_names %}
               <li class="nav-item">
-                <a class="nav-link" href="#"  style="color:white;">Permisos</a>
+                <a class="nav-link" href="#"  style="color:white;">Liquidar Clientes</a>
               </li>
+              {% endif %}
+
+              {% if 'Administrador' in user_group_names %}
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle"  style="color:white;" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                  Permisos
+                </a>
+                <ul class="dropdown-menu">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><hr class="dropdown-divider"></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
+              {% endif %}
+
+              {% if 'Administrador' in user_group_names or 'Reporteria' in user_group_names %}
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle"  style="color:white;" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Reportes
@@ -43,6 +67,7 @@
                   <li><a class="dropdown-item" href="#">Something else here</a></li>
                 </ul>
               </li>
+              {% endif %}
             </ul>
             <form action="{% url 'logout' %}" method="post">
                 {% csrf_token %}
