--- a/users/templates/users/users_list.html
+++ b/users/templates/users/users_list.html
@@ -25,7 +25,7 @@
 						<tr>
 							<th>Usuario</th>
 							<th>Nombre Completo</th>
-							<th>Activo</th>
+							<th>Estado</th>
                             <th>Rol</th>
 							<th></th>
 						</tr>
