--- a/authentication/templates/authentication/login.html
+++ b/authentication/templates/authentication/login.html
@@ -23,7 +23,7 @@
                   {% csrf_token %}
 
                   <div class="d-flex align-items-center mb-3 pb-1">
-                    <span class="h1 fw-bold mb-0">Cuerpo de Bomberos</span>
+                    <span class="h1 fw-bold mb-0">Benemérito Cuerpo de Bomberos de Balzar</span>
                   </div>
 
                   <h5 class="fw-normal mb-3 pb-3" style="letter-spacing: 1px;">Ingresa tus credenciales</h5>
