--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,9 @@
     {% if user.is_authenticated %}
     <nav class="navbar navbar-expand-lg" style="background-color:#ff4c4c;">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#"  style="color:white;">CBB</a>
+          <a class="navbar-brand" href="#"  style="color:white;">
+            <img src="{{ MEDIA_URL }}/media/cbb_logo.png" width="40" />
+          </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -48,7 +50,7 @@
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="{% url 'permits_create' %}">Generar Permiso</a></li>
-                  <li><a class="dropdown-item" href="#">Consultar Permisos</a></li>
+                  <li><a class="dropdown-item" href="{% url 'permits_list' %}">Consultar Permisos</a></li>
                 </ul>
               </li>
               {% endif %}
