--- a/templates/base.html
+++ b/templates/base.html
@@ -90,6 +90,18 @@
         </div>
     </nav>
     {% endif %}
+
+    {% if messages %}
+    <div class="container" style="padding-top: 10px;">
+      {% for message in messages %}
+        <div class="alert alert-{{ message.tags }} alert-dismissible fade show" role="alert">
+          {{message}}
+      {% endfor %}
+          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+    </div>
+    {% endif %}
+
     {% block content %}
     {% endblock %}
 
