--- a/clients/templates/clients/clients_list.html
+++ b/clients/templates/clients/clients_list.html
@@ -55,6 +55,7 @@
                                     <div class="col-4">
                                         <a href="{% url 'clients_edit' pk=client.pk %}" class="edit" data-toggle="modal"><i class="fa fa-pen-to-square"></i></a>
                                     </div>
+                                    {% if client.active %}
                                     <div class="col-4">
                                         <!-- Button trigger modal -->
                                         <a type="button" class="delete" data-bs-toggle="modal" data-bs-target="#clientModal-{{client.pk}}">
@@ -79,7 +80,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    {% if not client.active %}
+                                    {% else %}
                                     <div class="col-4">
                                         <a href="{% url 'clients_download_liquidate_pdf' pk=client.pk %}" class="success" data-toggle="modal"><i class="fa fa-download"></i></a>
                                     </div>
